recipes/cncf/istio/virtualservice-basic.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
        - uri:
            prefix: /v1/book
      route:
        - destination:
            host: app-svc
            port:
              number: 8080
    - match:
        - uri:
            exact: /health
      route:
        - destination:
            host: app-svc
            port:
              number: 8080
