recipes/cncf/istio/virtualservice-canary.yaml
# 가중치 트래픽 분할. weight 합이 100 이어야 한다.
# 검증: for i in $(seq 1 100); do curl -s http://$GW/version; echo; done | sort | uniq -c
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-canary
  namespace: app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - route:
        - destination:
            host: app-svc
            subset: v1
            port:
              number: 8080
          weight: 90
        - destination:
            host: app-svc
            subset: v2
            port:
              number: 8080
          weight: 10
